--- a/views/index.html
+++ b/views/index.html
@@ -157,12 +157,106 @@
 			</header>
 		</div>
 		<div class='row section'>
-			<div class='col-xs-2 col-xs-offset-2'>
-				<div class="radial-progress">
-				  <div class="circle">
-				    <div class="fill"></div>
+			<div class='col-xs-4 col-xs-offset-2'>
+				<p class='text-header'>LANGUAGES</p>
+				<div class="progress">
+				  <div class="progress-bar progress-bar-success progress-bar-custom" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 90%">
+				    <p class='progress-bar-text'>C/C++</p>
 				  </div>
 				</div>
+				<div class="progress">
+				  <div class="progress-bar progress-bar-success progress-bar-custom" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
+				    <p class='progress-bar-text'>C#</p>
+				  </div>
+				</div>
+				<div class="progress">
+				  <div class="progress-bar progress-bar-success progress-bar-custom progress-bar-striped active" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 70%">
+				    <p class='progress-bar-text'>Javascript/jQuery</p>
+				  </div>
+				</div>
+				<div class="progress">
+				  <div class="progress-bar progress-bar-success progress-bar-custom" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 75%">
+				    <p class='progress-bar-text'>HTML/CSS</p>
+				  </div>
+				</div>
+				<div class="progress">
+				  <div class="progress-bar progress-bar-success progress-bar-custom" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
+				    <p class='progress-bar-text'>Java</p>
+				  </div>
+				</div>
+				<div class="progress">
+				  <div class="progress-bar progress-bar-success progress-bar-custom" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
+				    <p class='progress-bar-text'>Shellscript</p>
+				  </div>
+				</div>
+			</div>
+		</div>
+		<div class='row section'>
+			<div class='col-xs-4 col-xs-offset-2'>
+				<p class='text-header'>TOOLS</p>
+				<div class="progress">
+				  <div class="progress-bar progress-bar-success progress-bar-custom" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 85%">
+				    <p class='progress-bar-text'>Git</p>
+				  </div>
+				</div>
+				<div class="progress">
+				  <div class="progress-bar progress-bar-success progress-bar-custom" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 90%">
+				    <p class='progress-bar-text'>Selenium Web Driver</p>
+				  </div>
+				</div>
+				<div class="progress">
+				  <div class="progress-bar progress-bar-success progress-bar-custom" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
+				    <p class='progress-bar-text'>Strider Continuous Integration</p>
+				  </div>
+				</div>
+				<div class="progress">
+				  <div class="progress-bar progress-bar-success progress-bar-custom progress-bar-striped active" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
+				    <p class='progress-bar-text'>AngularJS</p>
+				  </div>
+				</div>
+				<div class="progress">
+				  <div class="progress-bar progress-bar-success progress-bar-custom progress-bar-striped active" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 20%">
+				    <p class='progress-bar-text'>Azure</p>
+				  </div>
+				</div>
+				<div class="progress">
+				  <div class="progress-bar progress-bar-success progress-bar-custom progress-bar-striped active" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 10%">
+				    <p class='progress-bar-text'>NodeJS</p>
+				  </div>
+				</div>
+			</div>
+		</div>
+		<div class='row section'>
+			<div class='col-xs-10 col-xs-offset-2'>
+				<p class='text-header'>ADDITIONAL EXPOSURE</p>
+			</div>
+			<div class='col-xs-8 col-xs-offset-2'>
+				<span class="well well-sm">Python</span>
+				<span class="well well-sm">JSON</span>
+				<span class="well well-sm">mySQL</span>
+				<span class="well well-sm">ASM</span>
+				<span class="well well-sm">Bash</span>
+				<span class="well well-sm">HLSL</span>
+				<span class="well well-sm">GLSL</span>
+				<span class="well well-sm">Mocha</span>
+				<span class="well well-sm">Unity</span>
+				<span class="well well-sm">OpenGL</span>
+				<span class="well well-sm">DirectX</span>
+				<span class="well well-sm">JS Hint</span>
+				<span class="well well-sm">CasperJS</span>
+				<span class="well well-sm">Bower</span>
+				<span class="well well-sm">Grunt</span>
+				<span class="well well-sm">TestNG</span>
+				<span class="well well-sm">PhantomJS</span>
+				<span class="well well-sm">PHP</span>
+				<span class="well well-sm">Ruby</span>
+				<span class="well well-sm">Jira</span>
+				<span class="well well-sm">Trello</span>
+				<span class="well well-sm">IntelliJ</span>
+				<span class="well well-sm">Visual Studio</span>
+				<span class="well well-sm">Android</span>
+				<span class="well well-sm">Windows Phone</span>
+				<span class="well well-sm">Maya / 3ds Max</span>
 			</div>
 		</div>
 	</div>
