--- a/views/index.html
+++ b/views/index.html
@@ -159,8 +159,8 @@
 		<div class='row section'>
 			<div class='col-xs-4 col-xs-offset-2'>
 				<p class='text-header'>LANGUAGES</p>
-				<div class="progress">
-				  <div class="progress-bar progress-bar-success progress-bar-custom" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 90%">
+				<div class="progress progress-selected">
+				  <div class="progress-bar progress-bar-success progress-bar-custom progress-selected" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 90%">
 				    <p class='progress-bar-text'>C/C++</p>
 				  </div>
 				</div>
@@ -190,12 +190,26 @@
 				  </div>
 				</div>
 			</div>
+			<div class='col-xs-4 right-align'>
+				<p class='text-header'>C/C++</p>
+				<p class='text'>
+					<span class='skill-attribute'>Years Actively Used:</span> <b>4</b>
+					<br/>
+					<span class='skill-attribute'>Major Projects Used:</span> <b>4</b>
+					<br/>
+					<span class='skill-attribute'>Approxomite Line Count:</span> <b>10,000+</b>
+					<br/>
+					<p class='left-align attribute-description'>
+					My fundamentals were learned in C and all 4 years of college involved heavy use of C++, averaging around 4000+ lines per semester. Along with typical course assignments, I worked on 4 year-long projects with several different teams. It's been 7 months since my last major C++ project. 
+					</p>
+				</p>
+			</div>
 		</div>
 		<div class='row section'>
 			<div class='col-xs-4 col-xs-offset-2'>
 				<p class='text-header'>TOOLS</p>
-				<div class="progress">
-				  <div class="progress-bar progress-bar-success progress-bar-custom" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 85%">
+				<div class="progress progress-selected">
+				  <div class="progress-bar progress-bar-success progress-bar-custom progress-selected" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 85%">
 				    <p class='progress-bar-text'>Git</p>
 				  </div>
 				</div>
@@ -224,6 +238,18 @@
 				    <p class='progress-bar-text'>NodeJS</p>
 				  </div>
 				</div>
+			</div>
+			<div class='col-xs-4 right-align'>
+				<p class='text-header'>Git</p>
+				<p class='text'>
+					<span class='skill-attribute'>Years Actively Used:</span> <b>0.6</b>
+					<br/>
+					<span class='skill-attribute'>Major Projects Used:</span> <b>4</b>
+					<br/>
+					<p class='left-align attribute-description'>
+					I've been using Git/Github professionally, as well as with side projects. At work, our branching model is similar to the following: <a target="_blank" href='http://nvie.com/posts/a-successful-git-branching-model/'>workflow</a>.
+					</p>
+				</p>
 			</div>
 		</div>
 		<div class='row section'>
@@ -265,7 +291,6 @@
 			<header class='col-xs-12 text-center section-title'>
 				<h1>EDUCATION</h1>
 				<div class='underline'></div>
-				<h2>How I Spent $185,677</h2>
 			</header>
 		</div>
 		<div class='row section'>
@@ -286,7 +311,6 @@
 			<header class='col-xs-12 text-center section-title'>
 				<h1>EXPERIENCE</h1>
 				<div class='underline'></div>
-				<h2>How I Plan To Repay $185,677</h2>
 			</header>
 		</div>
 		<div class='section'>
@@ -326,8 +350,15 @@
 			<header class='col-xs-12 text-center section-title'>
 				<h1>PORTFOLIO</h1>
 				<div class='underline'></div>
-				<h2>What I Did While Spending $185,677</h2>
+				<h2>A taste of what I enjoy doing.</h2>
 			</header>
+		</div>
+		<div class='row'>
+			<div class='col-xs-4 col-xs-offset-4 text-center section'>
+				<button type="button" class="btn btn-default">All</button>
+				<button type="button" class="btn btn-default">Games</button>
+				<button type="button" class="btn btn-default">Web</button>
+			</div>
 		</div>
 	</div>
 	<div class='container-fluid screen' id='contact-screen'>
