--- a/views/index.html
+++ b/views/index.html
@@ -159,8 +159,8 @@
 		<div class='row section'>
 			<div class='col-xs-4 col-xs-offset-2'>
 				<p class='text-header'>LANGUAGES</p>
-				<div class="progress progress-selected" ng-repeat='language in languages'>
-				  <div class="progress-bar progress-bar-success progress-bar-custom progress-selected" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:{{ language.percent }}">
+				<div class="progress" ng-class="{'progress-selected': $index == selectedLanguage}" ng-repeat='language in languages' ng-click='displayLanguageDescription(language.name); insetLanguageBar($index);'>
+				  <div class="progress-bar progress-bar-success progress-bar-custom" ng-class="{'progress-selected': $index == selectedLanguage, 'progress-bar-striped active': language.inProgress}" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:{{ language.percent }}">
 				    <p class='progress-bar-text'>{{ language.name }}</p>
 				  </div>
 				</div>
@@ -168,23 +168,21 @@
 			<div class='col-xs-4 right-align'>
 				<p class='text-header'>C/C++</p>
 				<p class='text'>
-					<span class='skill-attribute'>Years Actively Used:</span> <b>4</b>
+					<span class='skill-attribute'>Years Actively Used:</span> <b>{{ languageDisplay.yearsUsed }}</b>
 					<br/>
-					<span class='skill-attribute'>Major Projects Used:</span> <b>4</b>
+					<span class='skill-attribute'>Major Projects Used:</span> <b>{{ languageDisplay.projects }}</b>
 					<br/>
-					<span class='skill-attribute'>Approxomite Line Count:</span> <b>10,000+</b>
+					<span class='skill-attribute'>Approxomite Line Count:</span> <b>{{ languageDisplay.lines }}</b>
 					<br/>
-					<p class='left-align attribute-description'>
-					My fundamentals were learned in C and all 4 years of college involved heavy use of C++, averaging around 4000+ lines per semester. Along with typical course assignments, I worked on 4 year-long projects with several different teams. It's been 7 months since my last major C++ project. 
-					</p>
+					<p class='left-align attribute-description'>{{ languageDisplay.description }}</p>
 				</p>
 			</div>
 		</div>
 		<div class='row section'>
 			<div class='col-xs-4 col-xs-offset-2'>
 				<p class='text-header'>TOOLS</p>
-				<div class="progress progress-selected" ng-repeat='tool in tools'>
-				  <div class="progress-bar progress-bar-success progress-bar-custom progress-selected" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:{{ tool.percent }}">
+				<div class="progress" ng-class="{'progress-selected': $index == selectedTool}" ng-repeat='tool in tools' ng-click='displayToolDescription(tool.name); insetToolBar($index);'>
+				  <div class="progress-bar progress-bar-success progress-bar-custom" ng-class="{'progress-selected': $index == selectedTool, 'progress-bar-striped active': tool.inProgress}" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:{{ tool.percent }}">
 				    <p class='progress-bar-text'>{{ tool.name }}</p>
 				  </div>
 				</div>
