--- a/styles/main.css
+++ b/styles/main.css
@@ -209,15 +209,15 @@ h2{
     box-shadow: inset 3px 3px 5px #275427;
 }
 
-.red{
+.games{
 	background-color: red;
 }
 
-.yellow{
+.web{
 	background-color: yellow;
 }
 
-.blue{
+.graphics{
 	background-color: blue;
 }
 
