--- a/styles/main.css
+++ b/styles/main.css
@@ -177,10 +177,27 @@ h2{
 .progress{
 	height:30px;
 	box-shadow: 3px 3px 5px #888888;
+
+	-webkit-transition: 0.2s ease-in-out;
+    -moz-transition: 0.2s ease-in-out;
+    -o-transition: 0.2s ease-in-out;
+    transition: 0.2s ease-in-out;
 }
 
 .progress:hover{
 	cursor: pointer;
+	box-shadow: 10px 10px 10px #888888;
+
+	transform: scale(1.1);	
+}
+
+.progress-selected{
+    box-shadow: inset 3px 3px 5px #275427;
+}
+
+.progress-selected:hover{
+	box-shadow: inset 3px 3px 5px #275427;
+	transform: scale(1);
 }
 
 .well-sm{
@@ -205,10 +222,6 @@ h2{
 	word-break:break-word;
 }
 
-.progress-selected{
-    box-shadow: inset 3px 3px 5px #275427;
-}
-
 .games{
 	background-color: red;
 }
@@ -222,13 +235,28 @@ h2{
 }
 
 .portfolio-item{
-	width:200px;
+	width:243px;
+	/*width:200px;*/
 	height:150px;
 	margin: 20px 15px;
 	display:inline-block;
 	float:left;
 
-	min-width: 200px;
+	/*
+	v-webkit-transition: 0.3s ease-in-out;
+    -moz-transition: 0.3s ease-in-out;
+    -o-transition: 0.3s ease-in-out;
+    transition: 0.3s ease-in-out;
+    */
+
+	-webkit-transition: 0.2s ease-in-out;
+    -moz-transition: 0.2s ease-in-out;
+    -o-transition: 0.2s ease-in-out;
+    transition: 0.2s ease-in-out;
+}
+
+.portfolio-item:hover{
+	transform: scale(1.1);
 }
 
 .portfolio-items{
@@ -237,6 +265,17 @@ h2{
 
 	display: inline-block;
 
-	max-width:920px;
+/*
+	max-width: 920px;
+	*/
+
+	max-width:819px;
+}
+
+.portfolio-tab{
+	width:auto;
+	height:30px;
+
+	float:bottom;
 }
 
